# car-snapper-demo

./: Cargo.toml  README.md  fluence.yaml
.fluence/: docker-compose.yaml  provider-artifacts.yaml  workers.yaml
.fluence/aqua/: deals.aqua  services.aqua
.fluence/configs/: nox-0_Config.toml  nox-1_Config.toml  nox-2_Config.toml
.fluence/modules/curl_effector.tar.gz_ee67030c62f2e89c0570ca89464e9a39/: curl_effector.wasm  module.yaml
.fluence/modules/ipfs_effector.tar.gz_d28bf5174afc4c6aaf5f44cf406c6792/: ipfs_effector.wasm  module.yaml
src/aqua/: main.aqua
src/gateway/src/: relays.json
src/gateway/src/compiled-aqua/: main.d.ts  main.js
src/services/myService/: service.yaml
src/services/myService/myService/: Cargo.toml
src/services/myService/myService/src/: main.rs
src/services/sealingService/: service.yaml
src/services/sealingService/sealingService/: Cargo.toml  module.yaml
