[package]
name = "myService"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "myService"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = "0.14.0"
blockless-car = "0.3.2"
multicodec = "0.1.0"
rand = "0.8.5"
curl-effector-imports = "0.1.2"
ipfs-effector-imports ="0.1.1"
serde_json = "1.0.120"

[dev-dependencies]
marine-rs-sdk-test = "0.16.1"
